...
          style={styles.author}>
          Autor: {fields.author}
        </Text>
        <View style={styles.likeContainer}>
          <Text style={styles.likeCount}>{countLikes} Curtidas</Text>
          <TouchableOpacity
            accessibilityLabel="Botão Adicionar Like"
            onPress={async () => await handleCount(fields.id)}>
            <Image
              source={require('../../assets/thumbsup.png')}
              style={styles.likeButton}
            />
          </TouchableOpacity>
...
